INTYGFV-16427: Added support for role sjukskoterska. (#248)